# Noki-NTE-Auto

./: CMakeLists.txt  README.md  main.cpp  resources.rc
